--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card-zoom-text {
+  @apply absolute text-5xl font-black transition-all duration-500 ease-in-out transform scale-110 text-gray-50 opacity-60;
+}
+
+.card-zoom:hover .card-zoom-image {
+  @apply scale-110;
+}
+.card-zoom:hover .card-zoom-text {
+  @apply scale-100;
+}
